[#37] Fixed span padding-left spacing

--- a/src/components/_shared/table.module.scss
+++ b/src/components/_shared/table.module.scss
@@ -26,7 +26,7 @@
 }
 
 span {
-    padding-right: 35x;
+    padding-right: 10px;
 }
 
 .won {
@@ -37,6 +37,8 @@ span {
     color: $lost;
 }
 
+
+// NOTE: trying out conditional rendering, want dynamic margin-top 
 .totalStats {
     padding-top: 6px;
     background-color: yellowgreen;
@@ -46,6 +48,3 @@ span {
     padding-top: 2px;
     background-color: aqua;
 }
-
-
-
